--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ patsy==0.5.1
 pefile==2019.4.18
 pickleshare==0.7.5
 prompt-toolkit==2.0.9
+pydotplus==2.0.2
 Pygments==2.4.2
 PyInstaller==3.5
 pyparsing==2.4.2
