PCA working with MLR, just numerical variables

--- a/config/MLconfig.yaml
+++ b/config/MLconfig.yaml
@@ -36,84 +36,90 @@ models: [
   #   show: file,
   #   log: all
   # },
-  # {
-  #   type: mlr,
-  #   desc: Multiple Linear Regression,
-  #   xColNames: cEnroll_nPSU_nS1S2,
-  #   xCategorical: *cat_enroll,
-  #   x: *cEnroll_nPSU_nS1S2,
-  #   y: *Target,
-  #   SL: 0.05,
-  #   traceOptimization: True,
-  #   show: file
-  # },
-  # {
-  #   type: mlr,
-  #   desc: Multiple Linear Regression,
-  #   xColNames: cat_enroll,
-  #   xCategorical: *cat_enroll,
-  #   x: *cat_enroll,
-  #   y: *Target,
-  #   SL: 0.05,
-  #   traceOptimization: True,
-  #   show: file
-  # },
-  # {
-  #   type: mlr,
-  #   desc: Multiple Linear Regression,
-  #   xColNames:  num_PSU,
-  #   xCategorical: False,
-  #   x: *num_PSU,
-  #   y: *Target,
-  #   SL: 0.05,
-  #   traceOptimization: True,
-  #   show: file
-  # },
-  # {
-  #   type: mlr,
-  #   desc: Multiple Linear Regression,
-  #   xColNames:  nS1S2,
-  #   xCategorical: False,
-  #   x: *nS1S2,
-  #   y: *Target,
-  #   SL: 0.05,
-  #   traceOptimization: True,
-  #   show: file
-  # },
-  # {
-  #   type: mlr,
-  #   desc: Multiple Linear Regression,
-  #   xColNames:  cEnroll_nPSU,
-  #   xCategorical: *cat_enroll,
-  #   x: *cEnroll_nPSU,
-  #   y: *Target,
-  #   SL: 0.05,
-  #   traceOptimization: True,
-  #   show: file
-  # },
-  # {
-  #   type: mlr,
-  #   desc: Multiple Linear Regression,
-  #   xColNames:  cEnroll_nS1S2,
-  #   xCategorical: *cat_enroll,
-  #   x: *cEnroll_nS1S2,
-  #   y: *Target,
-  #   SL: 0.05,
-  #   traceOptimization: True,
-  #   show: file
-  # },
   {
-    type: dt,
-    desc: Decision Tree,
-    xColNames:  cEnroll_nPSU_nS1S2,
+    type: mlr,
+    desc: Multiple Linear Regression,
+    xColNames: cEnroll_nPSU_nS1S2,
     xCategorical: *cat_enroll,
     x: *cEnroll_nPSU_nS1S2,
     y: *Target,
     SL: 0.05,
     traceOptimization: True,
-    show: file,
-    Optimize: True
+    Optimize: ["bwe","pca"],
+    show: file
   },
+  {
+    type: mlr,
+    desc: Multiple Linear Regression,
+    xColNames: cat_enroll,
+    xCategorical: *cat_enroll,
+    x: *cat_enroll,
+    y: *Target,
+    SL: 0.05,
+    traceOptimization: True,
+    Optimize: ["bwe","pca"],
+    show: file
+  },
+  {
+    type: mlr,
+    desc: Multiple Linear Regression,
+    xColNames:  num_PSU,
+    xCategorical: False,
+    x: *num_PSU,
+    y: *Target,
+    SL: 0.05,
+    traceOptimization: True,
+    Optimize: ["bwe","pca"],
+    show: file
+  },
+  {
+    type: mlr,
+    desc: Multiple Linear Regression,
+    xColNames:  nS1S2,
+    xCategorical: False,
+    x: *nS1S2,
+    y: *Target,
+    SL: 0.05,
+    traceOptimization: True,
+    Optimize: ["bwe","pca"],
+    show: file
+  },
+  {
+    type: mlr,
+    desc: Multiple Linear Regression,
+    xColNames:  cEnroll_nPSU,
+    xCategorical: *cat_enroll,
+    x: *cEnroll_nPSU,
+    y: *Target,
+    SL: 0.05,
+    traceOptimization: True,
+    Optimize: ["bwe","pca"],
+    show: file
+  },
+  {
+    type: mlr,
+    desc: Multiple Linear Regression,
+    xColNames:  cEnroll_nS1S2,
+    xCategorical: *cat_enroll,
+    x: *cEnroll_nS1S2,
+    y: *Target,
+    SL: 0.05,
+    traceOptimization: True,
+    Optimize: ["bwe","pca"],
+    show: file
+  },
+  # {
+  #   type: dt,
+  #   desc: Decision Tree,
+  #   xColNames:  cEnroll_nPSU_nS1S2,
+  #   xCategorical: *cat_enroll,
+  #   x: *cEnroll_nPSU_nS1S2,
+  #   y: *Target,
+  #   SL: 0.05,
+  #   traceOptimization: True,
+  #   show: file,
+  #   Optimize: True
+  # },
   # {
   #   type: DT,
   #   desc: Decision Tree,
