--- a/config/MLconfig.yaml
+++ b/config/MLconfig.yaml
@@ -93,7 +93,7 @@ models: [
     y: *Target,
     SL: 0.05,
     traceOptimization: True,
-    Optimize: ["bwe","pca"],
+    Optimize: ["bwe"],
     show: file
   },
   {
